<?xml version="1.0" encoding="utf-8"?>

<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewanim"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!--page chooser screen-->
    <LinearLayout
        android:id="@+id/page_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/page_picker_minus"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_minus" />

            <EditText
                android:id="@+id/page_picker_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="5"
                android:selectAllOnFocus="true"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/page_picker_plus"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_plus" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/page_picker_seeker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minWidth="100dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/page_preview"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_apply" />

            <ImageButton
                android:id="@+id/page_picker_close"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_revert" />
        </LinearLayout>
    </LinearLayout>

    <!--zoom chooser screen-->
    <LinearLayout
        android:id="@+id/zoom_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">


        <!--<HorizontalScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center">-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/zoom_picker_minus"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_minus" />

            <EditText
                android:id="@+id/zoom_picker_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/zoom_picker_plus"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_plus" />

            <Spinner
                android:id="@+id/zoom_spinner"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:entries="@array/fits"
                android:textSize="20sp" />

        </LinearLayout>
        <!--</HorizontalScrollView>-->

        <SeekBar
            android:id="@+id/zoom_picker_seeker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minWidth="100dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/zoom_preview"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_apply" />

            <ImageButton
                android:id="@+id/zoom_picker_close"
                style="@style/Viewer_Dialog_Icon"
                app:srcCompat="@drawable/new_revert" />
        </LinearLayout>
    </LinearLayout>

    <!--border crop screen-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

    </LinearLayout>

    <include layout="@layout/page_layout" />

    <include layout="@layout/add_bookmark" />

</ViewAnimator>
