<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="menu_zoom_text">Zoom</string>
    <string name="menu_crop_text">Crop</string>
    <string name="menu_goto_text">Go To</string>
    <string name="menu_bookmarks_text">Bookmarks</string>
    <string name="menu_add_bookmark_item">Add bookmark</string>
    <string name="menu_select_text">Select text</string>
    <string name="menu_rotation_text">Screen rotation</string>
    <string name="menu_navigation_text">Page layout</string>
    <string name="menu_help_text">Help</string>
    <string name="menu_about_text">About…</string>
    <string name="menu_open_text">Open Book</string>
    <string name="menu_outline_text">Outline</string>
    <string name="menu_open_dictionary_text">Open Dictionary</string>
    <string name="menu_day_night_text">Day/Night mode</string>
    <string name="menu_exit_text">Exit</string>
    <string name="menu_key_binder_text">Key Binder</string>
    <string name="menu_options_text">Settings</string>
    <string name="menu_tap_text">Tap zones</string>
    <string name="menu_search_item">Search</string>
    <string name="menu_other">Other…</string>

    <string name="menu_book_preferences">Book Options</string>
    <string name="menu_share_text">Share text</string>
    <string name="menu_share_file">Share file</string>
    <string name="msg_share_file_failed">Can\'t share the file from this location</string>


    <string name="export_all_bookmarks_menu_item">Export all bookmarks</string>
    <string name="export_bookmarks_menu_item">Export current bookmarks</string>
    <string name="import_all_bookmarks_menu_item">Import…</string>
    <string name="import_current_bookmarks_menu_item">Append from…</string>
</resources>
